# peclet-coupling

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: release.yml
doc/: porous_cuda_async_race.md  porous_cuda_async_race_PROMPT.md
examples/: fluidized_bed.py
python/peclet_coupling/: __init__.py  driver.py
src/: coupling_bindings.cpp  coupling_kernels.hpp  drag.hpp
tests/: CMakeLists.txt  test_fixed_bed_ergun.py  test_fixed_bed_ergun_porous.py  test_mpi_fixed_bed_ergun.py  test_mpi_moving_suspension.py  test_terminal_velocity.py
