# Python packaging for `peclet.coupling` — the unresolved point-particle CFD-DEM coupling.
#
# `pip install .` builds the `_coupling` Kokkos extension via scikit-build-core and installs it plus
# the CfdDem Python driver into the `peclet.coupling` namespace. Like the other peclet-* packages the
# Kokkos prefix is NOT pulled from PyPI (it is backend/arch specific): point the build at a prefix
# bootstrapped with ../tools/bootstrap_deps.sh by exporting CMAKE_PREFIX_PATH. The core headers are a
# sibling checkout (dev/suite build) — the coupling kernels are header-only compute over the arrays
# peclet.flow and peclet.dem expose.
#
#   CMAKE_PREFIX_PATH=/path/to/extern/install/host-openmp pip install .     # CPU (OpenMP)
#   CMAKE_PREFIX_PATH=/path/to/extern/install/nvidia-cuda  pip install .     # NVIDIA GPU (nvcc on PATH)

[build-system]
requires = ["scikit-build-core>=0.8", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "peclet-coupling"
version = "0.1.0"
description = "peclet.coupling — unresolved point-particle CFD-DEM coupling of peclet.flow + peclet.dem"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Frank Peters", email = "e.a.j.f.peters@gmail.com" }]
dependencies = ["numpy>=1.20", "peclet-flow>=0.2.1", "peclet-dem>=0.3.1"]

[project.urls]
Homepage = "https://github.com/computational-chemical-engineering/peclet"
Documentation = "https://github.com/computational-chemical-engineering/peclet"
Source = "https://github.com/computational-chemical-engineering/peclet-coupling"

[tool.scikit-build]
minimum-version = "0.8"
cmake.version = ">=3.24"
# The extension + the peclet/coupling package files are placed by the CMake install() rules (guarded
# by SKBUILD) into the peclet namespace; disable auto-discovery so nothing else is added.
wheel.install-dir = "."
wheel.packages = []
sdist.include = ["src", "python", "CMakeLists.txt", "README.md", "LICENSE",
                 "../core/include", "../cmake/SuiteNanobind.cmake"]

[tool.scikit-build.cmake.define]
PECLET_COUPLING_TESTS = "OFF"
